--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/hbd.mpeg">
+    <source src="./music/graduation.mpeg">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+          Happy graduation to youu!! Semoga yang telah direncanakan setelah kelulusan bisa segera tercapai ya ki. Semoga dapet pekerjaan yang sesuai dengan keinginan, lingkungan kerja yang sehat, kolega yang baik, dan gajinya kaya penghasilan bosnya :D Sukses terus untuk kehidupan selanjutnya. Bahagia selalu yaaaa. Apalagi ya hmmmm. Menurut maneh apa? Ayo buru make a wish di sini. ((piki sedang make a wish)) AAMIIN.
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="six">
-      <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/graduation.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
