--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/graduation.mpeg">
+    <source src="./music/graduate.mpeg">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -23,14 +23,14 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        Hi
+        Halo Piki tanpa Prasetyo
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">Eh, ada Piki di sini omaigatt</p>
     </div>
 
     <div class="three">
-      <p>It's your birthday!! :D</p>
+      <p>It's your graduation!! :D</p>
     </div>
 
     <div class="four">
@@ -46,13 +46,13 @@
       <p class="idea-1">That's what I was going to do.</p>
       <p class="idea-2">But then I stopped.</p>
       <p class="idea-3">
-        I realised, I wanted to do something<br>
-        <strong>special</strong>
+        Anggap aja ini kado kelulusan buat<br>
+        <strong>Vicky Rinaldi</strong>
         .
       </p>
-      <p class="idea-4">Because,</p>
+      <p class="idea-4">Karena,</p>
       <p class="idea-5">
-        You are Special
+        Piki berhasil melewati semua penderitaan terkait skripsinya
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -62,11 +62,11 @@
     </div>
 
     <div class="six">
-      <img src="./img/graduation.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/graduate.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">Happy Graduation!</h3>
+        <h5 id="wishText">Akhirnya udah ga perlu garap skripsi lagi :D horeee! ;)</h5>
       </div>
     </div>
 
