--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/graduate.mp3">
+    <source src="./music/graduation.mpeg">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -52,7 +52,7 @@
       </p>
       <p class="idea-4">Karena,</p>
       <p class="idea-5">
-        Piki berhasil melewati semua penderitaan terkait skripsinya
+        Piki berhasil melewati skripsinya
         <span>:)</span>
       </p>
       <p class="idea-6">
