--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Halo Piki tanpa Prasetyo
         <span id="name"></span>
       </h1>
-      <p class="two" id="greetingText">Eh, ada Piki di sini omaigatt</p>
+      <p class="two" id="greetingText">omaigatt orangnya ada di sini</p>
     </div>
 
     <div class="three">
@@ -43,8 +43,8 @@
     </div>
 
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-1">Udah make a wish kan?</p>
+      <p class="idea-2">Mari kita aamiin-kan sama sama. aamiin</p>
       <p class="idea-3">
         Anggap aja ini kado kelulusan buat<br>
         <strong>Vicky Rinaldi</strong>
@@ -56,8 +56,8 @@
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>Jadi</span>
+        <span>?</span>
       </p>
     </div>
 
@@ -139,8 +139,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Ok, cukup sekian dari Anisa.</p>
+      <p id="replay">TTD, Anisa, pacar LZJ.</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
