--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/graduation.mpeg">
+    <source src="./music/lulus.mpeg">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
