--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy graduation to youu!! Semoga yang telah direncanakan setelah kelulusan bisa segera tercapai ya ki. Semoga dapet pekerjaan yang sesuai dengan keinginan, lingkungan kerja yang sehat, kolega yang baik, dan gajinya kaya penghasilan bosnya :D Sukses terus untuk kehidupan selanjutnya. Bahagia selalu yaaaa. Apalagi ya hmmmm. Menurut maneh apa? Ayo buru make a wish di sini. ((piki sedang make a wish)) AAMIIN.
+          Happy graduation to youu!! Semoga yang telah direncanakan setelah kelulusan bisa segera tercapai ya ki. Semoga dapet pekerjaan yang sesuai dengan keinginan, lingkungan kerja yang sehat, kolega yang baik, dan gajinya kaya penghasilan bosnya :D Sukses terus untuk kedepannya. Bahagia selalu yaaaa. Apalagi ya hmmmm. Menurut maneh apa? Ayo buru make a wish di sini. ((piki sedang make a wish)) AAMIIN.
         </p>
         <p class="fake-btn">Send</p>
       </div>
